[build-system]
requires = [
    'setuptools>=42',
    'wheel'
]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['ppi_utils']

# [build-system]
# requires = ['poetry-core>=1.0.0']
# build-backend = 'poetry.core.masonry.api'

[project]  # tool.poetry
name = 'ppi_utils'
version = '0.0.2'
description = ''
license = {text = 'AFL-3.0'}

[tool.poetry]
authors = ['Leo Kaindl <leo.kaindl@tum.de>']
license = 'AFL-3.0'

[tool.poetry.dependencies]
python = '^3.9.7'
pytorch = '^1.0.2'
torch = '^1.11.0'
biopython = '^1.79'

# [tool.poetry.dev-dependencies]


