[tool.setuptools]
#packages = ['ppi_utils']
namespaces = true
include-package-data = true

[tool.setuptools.packages.find]
where = ["ppi_utils"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ppi_utils"
version = "0.0.5"
description = ""
authors = ["Leo Kaindl <leo.kaindl@tum.de>"]
license = "AFL-3.0"

[tool.poetry.dependencies]
python = "^3.9.7"
#pytorch = "^1.0.2"
#torch = "^1.11.0"
biopython = "^1.79"
pandas = "^1.5.3"
dataclass-wizard = "^0.22.2"
networkx = "^3.0"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

